tests/ui/issues/issue-54410.stderr
error[E0277]: the size for values of type `[i8]` cannot be known at compilation time
  --> $DIR/issue-54410.rs:2:5
   |
LL |     pub static mut symbol: [i8];
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i8]`
   = note: statics and constants must have a statically known size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
